--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,14 +1,14 @@
 body {
     position: relative;
     display: flex;
-
     flex-direction: column;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 16px;
     line-height: 1.42857143;
     color: #222222;
     background-color: #fff;
-    margin: 0;
+    margin: 0px;
+    padding: 0px;
 }
 
 .navbar_parent {
@@ -18,6 +18,7 @@ body {
     color: #fff;
     width: 100%;
     z-index: 2;
+
 }
 
 .nav_navbar {
@@ -752,4 +753,160 @@ textarea.form-control{height:auto}
 
 .navbar-brand {
     color:rgba(0,0,0,.9)
+}
+
+
+.book_list_items {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    list-style: none;
+}
+
+.book_list_item {
+    width: 100%;
+}
+
+.context_book_list_item {
+    max-width: 820px;
+    position: relative;
+    width: 100%;
+    padding-bottom: 32px;
+}
+
+.ContextBookCardLong__bookDescriptionMobile {
+    font: 14px/1.5 firasans, sans-serif;
+    color: #393f45;
+    display: none;
+}
+
+.ContextBookCardLong__link {
+    display: inline;
+    margin-left: 10px;
+    font-weight: 600;
+    color: #BE5B04;
+}
+
+.ContextBookCardLong__bookWrapper {
+    display: flex;
+}
+
+.ContextBookCardLong__bookCover {
+    flex-shrink: 0;
+    padding: 8px 0;
+}
+
+.ContextBookCardLong__bookDetail {
+    width: 100%;
+    padding: 2px 0 8px 16px;
+}
+
+.BookCover__book {
+    position: relative;
+    box-shadow: 0 4px 6px 0 rgba(37, 38, 40, 0.2);
+    border-radius: 8px;
+    font-size: 0;
+    background: #f7f7f7;
+    overflow: hidden;
+}
+
+
+a {
+    text-decoration: none;
+}
+.BookCover__bookImage {
+    max-width: 100%;
+}
+
+.ContextBookCardLong__bookData {
+    max-width: 90%;
+    padding: 8px 0 4px;
+}
+
+.ContextBookCardLong__bookDescription {
+    font: 14px/1.5 firasans, sans-serif;
+    color: #393f45;
+}
+
+.ContextBookCardLong__bookTitle {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 24px;
+    z-index: 1;
+}
+
+.ContextBookCardLong__bookAuthor {
+    display: block;
+    margin-top: 4px;
+    font-size: 14px;
+    color: #be5b04;
+}
+
+.section_books {
+   background-color: #13191e;
+   background-image: url(http://booker.psdemo.ru/data/banners/img_header.jpg);
+    padding: 120px 120px 80px 80px;
+}
+
+.book_list {
+
+    background-color: #13191e;
+    overflow: visible;
+
+    position: relative;
+    padding-top: 20px;
+    border-radius: 12px;
+}
+
+.ContextPagination__contextPagination {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 320px;
+    height: 40px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #f7f7f7;
+    border-radius: 12px;
+}
+
+.NavigationButton__prev[disabled], .NavigationButton__next[disabled] {
+    border-top-color: #e7e7e7;
+    cursor: text;
+}
+
+.NavigationButton__prev {
+    transform: rotate(90deg);
+}
+
+.NavigationButton__prev, .NavigationButton__next {
+    width: 0px;
+    height: 0px;
+    border: 10px solid transparent;
+    border-top-color: #be5b04;
+    margin: 0;
+    padding: 0;
+    float: left;
+    cursor: pointer;
+}
+
+.NavigationButton__next {
+    transform: rotate(270deg);
+}
+
+.NavigationButton__prev::before, .NavigationButton__next::before {
+    content: "";
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    border: 10px solid transparent;
+    border-radius: 4px;
+    border-top-color: #f7f7f7;
+    transform: translate(-10px, -13px);
+}
+
+*::before {
+    box-sizing: inherit;
 }
