create button exit

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,6 +35,10 @@
                         <li>
                             <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
                         </li>
+
+                        <li>
+                            <a class="btn_exit" href="/logout">Выйти</a>
+                        </li>
                     {% else %}
                         <li>
                             <a href="/login">Вход</a>
