--- a/templates/base.html
+++ b/templates/base.html
@@ -33,7 +33,7 @@
                     </li>
                     {% if current_user.is_authenticated %}
                         <li>
-                            <a href="/logout">{{ current_user.name }}</a>
+                            <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
                         </li>
 
                         <li>
