--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,6 @@ body {
     color: #fff;
     width: 100%;
     z-index: 2;
-
 }
 
 .nav_navbar {
@@ -36,7 +35,7 @@ body {
 .nav_navbar .nav_container {
     position: relative;
     height: 100%;
-    max-width: 960px;
+    max-width: 1100px;
     margin: 0 auto;
     display: flex;
 }
@@ -911,32 +910,102 @@ a {
     box-sizing: inherit;
 }
 
-.btn_exit {
-  position: relative;
+.boot {
+
   display: inline-block;
-  font-size: 90%;
-  font-weight: 700;
-  color: rgb(209,209,217);
+  font-family: arial,sans-serif;
+  font-size: 11px;
+  color: rgb(205,216,228);
+  text-shadow: 0 -1px rgb(46,53,58);
   text-decoration: none;
-  text-shadow: 0 -1px 2px rgba(0,0,0,.2);
-  padding: .5em 1em;
+  user-select: none;
+  line-height: 2em;
+  padding: 1px 1.2em;
   outline: none;
+  border: 1px solid rgba(33,43,52,1);
   border-radius: 3px;
-  background: linear-gradient(rgb(110,112,120), rgb(81,81,86)) rgb(110,112,120);
+  background: rgb(81,92,102) linear-gradient(rgb(81,92,102), rgb(69,78,87));
   box-shadow:
-   0 1px rgba(255,255,255,.2) inset,
-   0 3px 5px rgba(0,1,6,.5),
-   0 0 1px 1px rgba(0,1,6,.2);
-  transition: .2s ease-in-out;
+   inset 0 1px rgba(101,114,126,1),
+   inset 0 0 1px rgba(140,150,170,.8),
+   0 1px rgb(83,94,104),
+   0 0 1px rgb(86,96,106);
 }
-.btn_exit:hover:not(:active) {
-  background: linear-gradient(rgb(126,126,134), rgb(70,71,76)) rgb(126,126,134);
-}
-.btn_exit:active {
-  top: 1px;
-  background: linear-gradient(rgb(76,77,82), rgb(56,57,62)) rgb(76,77,82);
+.boot:active {
   box-shadow:
-   0 0 1px rgba(0,0,0,.5) inset,
-   0 2px 3px rgba(0,0,0,.5) inset,
-   0 1px 1px rgba(255,255,255,.1);
+   inset 0 1px 3px rgba(0,10,20,.5),
+   0 1px rgb(83,94,104),
+   0 0 1px rgb(86,96,106);
+}
+.boot:focus:not(:active) {
+  border: 1px solid rgb(22,32,43);
+  border-bottom: 1px solid rgb(25,34,45);
+  background: rgb(53,61,71);
+  box-shadow:
+   inset 0 1px 3px rgba(0,10,20,.5),
+   0 1px rgb(83,94,104),
+   0 0 1px rgb(86,96,106);
+  pointer-events: none;
+}
+
+a.btn_exit {
+  -webkit-box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
+   -webkit-transform-origin: 50% 1px;
+   -webkit-transition: all 0.15s ease-in-out;
+  background:  #161616;
+  border-color: rgba(255, 255, 255, 0.027451) #FF8C39 rgba(255, 255, 255, 0.027451) rgba(255, 255, 255, 0.027451);
+   border-style: solid;
+  border-width: 1px 4px 1px 1px;
+  box-shadow: rgba(0, 0, 0, 0.701961) 0px 5px 12px;
+  color: #555;
+  display:block;
+  width:90px;
+  font-family: Open Sans, Sans-serif;
+  border-radius: 5px;
+   font-size: 13px;
+  letter-spacing: 4px;
+  text-shadow: rgb(0, 0, 0) 0px 1px 1px;
+  line-height: 30px;
+  position: relative;
+ margin-top: 15px;
+  text-align: center;
+  text-decoration:none;
+}
+a.btn_exit:hover {
+  cursor: pointer;
+  opacity: 0.9;
+  border-width: 1px 7px 1px 1px;
+}
+a.btn_exit:active {
+-webkit-box-shadow:inset rgba(0, 0, 0, 0.701961) 0px 7px 12px,rgba(0, 0, 0, 0.701961) 0px 2px 12px  ;
+text-shadow: rgb(0, 0, 0) 0px -2px 1px;
+margin-top: 1px;
+}
+
+.btn_login {
+  text-decoration: none;
+  outline: none;
+  display: inline-block;
+  width: 100px;
+  height: 45px;
+  line-height: 45px;
+  border-radius: 45px;
+  
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 13px;
+
+  text-align: center;
+  letter-spacing: 1.5px;
+  font-weight: 600;
+  color: #524f4e;
+  background: white;
+  box-shadow: 0 8px 15px rgba(0,0,0,.1);
+  transition: .3s;
+  background-color: #161616;
+}
+.btn_login:hover {
+  background: #FF8C39;
+  box-shadow: 0 15px 20px #FF8C39;
+  color: white;
+  transform: translateY(-5px);
 }
