--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1009,3 +1009,319 @@ margin-top: 1px;
   color: white;
   transform: translateY(-5px);
 }
+
+.ab-container {
+    padding: 120px 0px 80px 40px;
+    background-color: #13191e;
+
+}
+
+.block_table {
+    border-radius: 12px;
+    background-color: #16212b;
+    display: table;
+    position: relative;
+}
+
+.column {
+    display: table-cell;
+    vertical-align: top;
+}
+
+.content_column {
+    min-width: 800px;
+}
+
+.block_table {
+    display: table;
+    width: 100%;
+}
+
+.biblio_book_top {
+    margin-bottom: 30px;
+}
+
+.biblio_book_left, biblio_book_center {
+    vertical-align: top;
+}
+
+.biblio_book_center {
+    padding: 30px 30px;
+}
+
+.biblio_book_left {
+    padding: 30px 30px;
+    width: 1%;
+}
+
+.biblio_book_cover {
+    position: relative;
+}
+
+.biblio_book_left .biblio_book_other_carriers {
+    margin: 10px 0 10px 80px;
+}
+
+.biblio_book_other_carriers {
+    color: #777;
+    font-size: 12px;
+    line-height: 30px;
+}
+
+.biblio_book_other_carriers__item {
+    padding: 7px 0 7px 22px;
+    position: relative;
+    line-height: 16px;
+    color: #767579;
+    margin-right: 10px;
+}
+
+.cover {
+    line-height: 0;
+    position: relative;
+}
+
+.biblio_book_cover_image {
+    border: 1px solid #cecdcc;
+    max-width: 417px;
+    box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    -webkit-box-sizing: content-box;
+}
+
+
+.biblio-book__title-block {
+    margin-bottom: 10px;
+}
+
+.biblio_book_name {
+    margin-bottom: 10px;
+}
+
+.biblio_book_name h1 {
+    display: inline;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 20px;
+
+}
+
+.biblio-book__title-block h1 {
+    line-height: 30px;
+    display: inline-block;
+
+}
+
+.biblio-book__title-block .label-text {
+    background-color: #EBEBEB;
+    color: #767579;
+}
+
+.biblio-book__title-block .label {
+    word-break: break-word;
+    border-radius: 12px;
+    font-size: 14px;
+    padding: 5px 7px;
+    margin: 0 0 0 8px;
+    text-transform: uppercase;
+    position: relative;
+    vertical-align: middle;
+    opacity: 1;
+    text-decoration: none;
+    font-weight: normal;
+}
+
+.biblio_book_author, .biblio_book_sequences {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.biblio_book_annotation {
+    margin-bottom: 18px;
+    color: white;
+}
+
+.biblio_book_descr_caption, .biblio_book_info_detailed_caption {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 14px;
+    font-weight: bold;
+}
+
+.biblio_book_buy {
+    margin-bottom: 10px;
+    width: 440px;
+}
+
+.biblio_book_buy .coolbtn {
+    display: block;
+    width: 100%;
+    font-size: 16px;
+    font-weight: bold;
+    height: 50px;
+    line-height: 50px;
+}
+
+.btn-green.btn-green {
+    color: #fff;
+    background: #0e920e;
+    transition: all 0.3s ease 0s;
+}
+
+.coolbtn {
+    -webkit-appearance: none;
+}
+
+.coolbtn {
+    border: 0 none;
+    position: relative;
+    padding: 0 10px;
+    text-decoration: none;
+    display: inline-block;
+    height: 40px;
+    line-height: 40px;
+    font-size: 13px;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
+    border-radius: 3px;
+}
+
+.uppercase {
+    text-transform: uppercase;
+}
+
+.biblio_book_author {
+    font-size: 11px;
+    color: white;
+}
+
+.light {
+  background: #f3f3f3;
+  overflow: hidden; }
+
+.wrapper {
+  margin: 0;
+  padding: 4em; }
+
+.doc {
+  border-bottom: 1px solid #ccc;
+  margin: 1em auto;
+  width: 40%; }
+  .doc .title {
+    text-align: center; }
+
+/*!
+ * The important stuffs. The ones that you should copy-paste and use.
+ */
+.paginate {
+  text-align: center;
+}
+.paginate ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+.paginate li {
+    display: inline;
+}
+.paginate a {
+    border-radius: 3px;
+    box-shadow: rgba(0, 0, 0, 0.2) 0 0 0 1px;
+    margin: 1px 2px;
+    padding: 5px 10px;
+    display: inline-block;
+    border-top: 1px solid #fff;
+    text-decoration: none;
+    color: #717171;
+    font-size: smaller;
+    font-family: "Helvetica Neueu", Helvetica, Arial, sans-serif;
+    text-shadow: white 0 1px 0;
+    background-color: #f5f5f5;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#f9f9f9), to(#eaeaea));
+    background-image: -webkit-linear-gradient(top, #f9f9f9, #eaeaea);
+    background-image: -moz-linear-gradient(top, #f9f9f9, #eaeaea);
+    background-image: -ms-linear-gradient(top, #f9f9f9, #eaeaea);
+    background-image: -o-linear-gradient(top, #f9f9f9, #eaeaea);
+    background-image: linear-gradient(top, #f9f9f9, #eaeaea);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#f9f9f9', EndColorStr='#eaeaea');
+}
+.paginate a:first-child, .paginate a.first {
+    margin-left: 0;
+}
+.paginate a:last-child, .paginate a.last {
+    margin-right: 0;
+}
+.paginate a:hover, .paginate a:focus {
+  border-color: #fff;
+  background-color: #fdfdfd;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#fefefe), to(#fafafa));
+  background-image: -webkit-linear-gradient(top, #fefefe, #fafafa);
+  background-image: -moz-linear-gradient(top, #fefefe, #fafafa);
+  background-image: -ms-linear-gradient(top, #fefefe, #fafafa);
+  background-image: -o-linear-gradient(top, #fefefe, #fafafa);
+  background-image: linear-gradient(top, #fefefe, #fafafa);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#fefefe', EndColorStr='#fafafa');
+}
+
+.paginate a.more {
+  box-shadow: 0 0 0 0 transparent;
+  border: 0 none;
+  background: transparent;
+  margin-left: 0;
+  margin-right: 0;
+}
+.paginate a.active {
+  box-shadow: rgba(0, 0, 0, 0.75) 0 0 0 0 inset;
+  border-color: #505050;
+  color: #f2f2f2;
+  text-shadow: black 0 1px 0;
+  background-color: #676767;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#5f5f5f), to(#5c5c5c));
+  background-image: -webkit-linear-gradient(top, #5f5f5f, #5c5c5c);
+  background-image: -moz-linear-gradient(top, #5f5f5f, #5c5c5c);
+  background-image: -ms-linear-gradient(top, #5f5f5f, #5c5c5c);
+  background-image: -o-linear-gradient(top, #5f5f5f, #5c5c5c);
+  background-image: linear-gradient(top, #5f5f5f, #5c5c5c);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#5f5f5f', EndColorStr='#5c5c5c');
+}
+
+.paginate-dark a {
+  box-shadow: rgba(0, 0, 0, 0.3) 0 0 0 1px;
+  border-top: 1px solid #62686d;
+  text-shadow: rgba(0, 0, 0, 0.75) 0 1px 0;
+  color: #fff;
+  background-color: #4e5458;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#575e63), to(#3f4347));
+  background-image: -webkit-linear-gradient(top, #575e63, #3f4347);
+  background-image: -moz-linear-gradient(top, #575e63, #3f4347);
+  background-image: -ms-linear-gradient(top, #575e63, #3f4347);
+  background-image: -o-linear-gradient(top, #575e63, #3f4347);
+  background-image: linear-gradient(top, #575e63, #3f4347);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#575e63', EndColorStr='#3f4347');
+}
+.paginate-dark a:hover, .paginate-dark a:focus {
+    border-color: #61788a;
+    background-color: #4d6374;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#566f82), to(#3e505e));
+    background-image: -webkit-linear-gradient(top, #566f82, #3e505e);
+    background-image: -moz-linear-gradient(top, #566f82, #3e505e);
+    background-image: -ms-linear-gradient(top, #566f82, #3e505e);
+    background-image: -o-linear-gradient(top, #566f82, #3e505e);
+    background-image: linear-gradient(top, #566f82, #3e505e);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#566f82', EndColorStr='#3e505e');
+ }
+
+.paginate-dark a.active {
+    box-shadow: rgba(0, 0, 0, 0.75) 0 0 0 0 inset;
+    border-color: #2d3035;
+    background-color: #303338;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#303338), to(#2d3034));
+    background-image: -webkit-linear-gradient(top, #303338, #2d3034);
+    background-image: -moz-linear-gradient(top, #303338, #2d3034);
+    background-image: -ms-linear-gradient(top, #303338, #2d3034);
+    background-image: -o-linear-gradient(top, #303338, #2d3034);
+    background-image: linear-gradient(top, #303338, #2d3034);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#303338', EndColorStr='#2d3034');
+ }
