--- a/templates/main.html
+++ b/templates/main.html
@@ -20,7 +20,7 @@
                     <div class="swiper_container swiper-container-horizontal swiper-container-free-mode">
                         <div class="swiper_wrapper" style="transform: translate3d(0px, 0px, 0px);">
                             {% for values in books %}
-                                {{ set_book_swiper(values["url"], values["image_url"], values["name"], values["author"]) }}
+                                {{ set_book_swiper(url, values["id"], values["icon_url"], values["name"], values["author"]) }}
                             {% endfor %}
                         </div>
 
