--- a/templates/base.html
+++ b/templates/base.html
@@ -26,14 +26,14 @@
                         <a href="/authors">Авторы</a>
                     </li>
                     <li>
-                        <form class="search_btn">
-                          <input type="text" placeholder="Искать книгу...">
+                        <form action="/forward/" class="search_btn">
+                          <input type="text" name="search" placeholder="Искать книгу...">
                           <button type="submit" value="Найти книгу"></button>
                         </form>
                     </li>
                     {% if current_user.is_authenticated %}
                         <li>
-                            <a class="btn_login" href="/logout">Корзина</a>
+                            <a class="btn_login" href="/cart">Корзина</a>
                         </li>
 
                         <li>
