--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-
+<div class="content">
     <div class="section_input content">
-        <main role="main" class="container">
+        <div role="main" class="container">
             <h1>Авторизация</h1>
             <form action="" method="post" novalidate>
                 {{ form.hidden_tag() }}
@@ -32,6 +32,7 @@
                     </div>
                 {% endif %}
             </form>
-        </main>
+        </div>
     </div>
+</div>
 {%  endblock %}
