update index.html update swiper

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}" />
 
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.9.0.min.js"></script>
+    <script type="text/javascript" src="{{url_for('static', filename='js/index.js')}}"></script>
+    <script type="text/javascript">
+            $(function(){
+
+                $('#slider1').Thumbelina({
+                    $bwdBut:$('#slider1 .left'),    // Selector to left button.
+                    $fwdBut:$('#slider1 .right')    // Selector to right button.
+                });
+            })
+        </script>
+    <style type="text/css">
+            #slider1 {
+                position:relative;  /* Containers need relative or absolute position. */
+                margin-left:20px;
+                width:100%;
+                height:300px;
+                border-top:1px solid #aaa;
+                border-bottom:1px solid #aaa;
+            }
+    </style>
     <title>Booker</title>
-    <style> </style>
 </head>
     <body>
         <nav class="nav_navbar navbar_parent" id="nav_navbar">
@@ -26,16 +46,21 @@
                         <a href="/authors">Авторы</a>
                     </li>
                     <li>
-                        <form action="/forward/" class="search_btn">
+                        <form action="/forward/" class="search_btn" method="POST">
                           <input type="text" name="search" placeholder="Искать книгу...">
                           <button type="submit" value="Найти книгу"></button>
                         </form>
                     </li>
                     {% if current_user.is_authenticated %}
-                        <li>
-                            <a class="btn_login" href="/cart">Корзина</a>
-                        </li>
-
+                        {% if current_user.type == "LIBRARIAN" %}
+                            <li>
+                                <a class="btn_login" href="/cart">Кабинет</a>
+                            </li>
+                        {% else %}
+                             <li>
+                                <a class="btn_login" href="/cart">Корзина</a>
+                            </li>
+                        {% endif%}
                         <li>
                             <a class="btn_exit" href="/logout">Выйти</a>
                         </li>
@@ -111,5 +136,7 @@
 
             </div>
         </footer>
+
     </body>
+
 </html>
