--- a/templates/macros.html
+++ b/templates/macros.html
@@ -1,5 +1,5 @@
 {% macro set_book_swiper(url, id, image_url, name, author) %}
-<div class="book_card swiper_slide">
+<div class="book_card swiper-slide">
     <div class="book">
         <div class="book_image" style="width: 124px; height: 196px;">
             {% set id_book = id | string %}
